--- a/bericht/thesis.tex
+++ b/bericht/thesis.tex
@@ -612,7 +612,7 @@ Bei den bereits genannten Datenquellen ergab sich die Problematik dass die Infor
 
 \subsection{Tesseract}
 Tesseract wurde ursprünglich bei Hewlett-Packard entwickelt und 2005 als Open Source veröffentlicht wo es seit 2006 von Google betreut wird.
-Seit Version 4 wurde die Engine auf ein künstliches Neuronales Netz aufgebaut. Grundsätzlich wird die Software von der Kommandozeile aus gesteuert. Um es aus unserem Python-Skript ansprechbar zu machen wird dazu noch das pytesseract-Package für Python benötigt. 
+Seit Version 4 wurde die Engine auf ein künstliches Neuronales Netz aufgebaut. Grundsätzlich wird die Software von der Kommandozeile aus gesteuert. Um es aus unserem Python-Skript ansprechbar zu machen wird dazu noch das pytesseract-Package für Python benötigt.
 
 \subsubsection{Bildumwandlung}\label{sec:sub:sub:bild}
 Während der Entwicklung und Verwendung von Tesseract ist aufgefallen das die Engine mit einigen bunten Bildern, die die Landesregierungen veröffentlicht haben Probleme hat. Vor allem wenn der Text farbig auf farbigen Hintergrund ist. Um dieses Problem schnell und trotzdem effizient zu lösen haben wir uns entschieden die Bilder vor der Textanalyse in schwarz und weiß umzuwandeln. Verschiedene Tests und die bisherige Erfahrung haben gezeigt dass das zwar keine perfekte aber durchaus eine solide Lösung ist.
@@ -647,21 +647,21 @@ indexName = "restrictions"
 \end{lstlisting}
 
 \subsubsection{Datenquellen Konfiguration}
-Da fast auschließlich nur spezielle Elemente der Websiten wie die \textless a\textgreater -Tags der PDFS oder  \textless img\textgreater -Tags der Bilder selektiert werden mussten wurde auf ein Key/Value-Schema zurückgegriffen. Der Key spezifierte ob der Code auf eine spezielle Element-ID oder ein Klassenname durchsucht wird, falls das aber nicht möglich war wurde auf den eindeutigen CSS Selector des Elements zurückgegriffen. 
+Da fast auschließlich nur spezielle Elemente der Websiten wie die \textless a\textgreater -Tags der PDFS oder  \textless img\textgreater -Tags der Bilder selektiert werden mussten wurde auf ein Key/Value-Schema zurückgegriffen. Der Key spezifierte ob der Code auf eine spezielle Element-ID oder ein Klassenname durchsucht wird, falls das aber nicht möglich war wurde auf den eindeutigen CSS Selector des Elements zurückgegriffen.
 
 \begin{figure}[H]
 \caption{HTML-Element der Hessischen Landesseite}
 \label{htmlHessen}
 \centering
 \includegraphics[scale=1.0]{pictures/hessenHTMLexample.png}
-\end{figure} 
+\end{figure}
 
 Wie man in \cref{htmlHessen} sehen kann ist das \textless a\textgreater -Tag nicht über eine Id oder ähnliches eindeutig selektierbar deswegen wird ein CSS Selector gebildet, den man sich zudem auch über die Entwicklertools generieren kann. In diesem Beispiel:
 \begin{lstlisting}[caption=CSS Selector]
 #node-listenseite-100174 > div.content.clearfix > div.view.view-registerblock.view-id-registerblock.view-display-id-block.view-dom-id-eabeac53f51705a80d47815e52e2470f.hzd_registerpage-processed > div > div.views-row.views-row-1.views-row-first.views-row-odd > div.views-field.views-field-nothing-2.registerpage-content-right.he_content_body > div > a
 \end{lstlisting}
 
-Zu jedem Bundesland wurde eine Konfiguration in ElasticSearch gespeichert die am Anfang des Programms geladen wird und dementsprechend dann die Daten lädt. 
+Zu jedem Bundesland wurde eine Konfiguration in ElasticSearch gespeichert die am Anfang des Programms geladen wird und dementsprechend dann die Daten lädt.
 
 \begin{lstlisting}[caption=Config von Bayern, language=json]
 {
@@ -679,15 +679,15 @@ Zu jedem Bundesland wurde eine Konfiguration in ElasticSearch gespeichert die am
 \label{activityRestriction}
 \centering
 \includegraphics[scale=0.5]{pictures/aktivitätsdiagramm_restrictionscraper.png}
-\end{figure} 
+\end{figure}
 
 \subsubsection{Rohdaten Extrahierung}\label{sec:sub:sub:rohdaten}
 
-Wie im Aktivitätsdiagramm \cref{activityRestriction} zu sehen ist, werden am Anfang alle Datenquellenkonfigurationen aus ElasticSearch geladen und der Scraping Prozess für jede Quelle gestartet. Hierbei wird auf die in der Config angegebene URL zugegriffen und die jeweiligen Elemente die durch Target/Value spezifiert sind heruntergeladen. Dazu wird auf die Python-Bibliothek BeautifulSoup zurückgegriffen die zum parsen von XML- und HTML-Dokumenten dient. 
+Wie im Aktivitätsdiagramm \cref{activityRestriction} zu sehen ist, werden am Anfang alle Datenquellenkonfigurationen aus ElasticSearch geladen und der Scraping Prozess für jede Quelle gestartet. Hierbei wird auf die in der Config angegebene URL zugegriffen und die jeweiligen Elemente die durch Target/Value spezifiert sind heruntergeladen. Dazu wird auf die Python-Bibliothek BeautifulSoup zurückgegriffen die zum parsen von XML- und HTML-Dokumenten dient.
 
 \begin{lstlisting}[caption=Parsen und filtern der Website, language=Python]
 	page = requests.get(self.baseUrl)
-       soup = BeautifulSoup(page.content, 'lxml')	
+       soup = BeautifulSoup(page.content, 'lxml')
         if self.target == 'CSSselector':
             elements = soup.select(self.val)
 
@@ -698,7 +698,7 @@ Wie im Aktivitätsdiagramm \cref{activityRestriction} zu sehen ist, werden am An
             elements = soup.find_all(**kwargs)
 \end{lstlisting}
 
-Nachdem die Elemente extrahiert wurden wird je nach Fall weiter verfahren. Wenn es eine Bild-URL ist wird das Bild herunter geladen. Um mit Tesseract eine höhere Genauigkeit zu erzielen wie in \cref{sec:sub:sub:bild} beschrieben, werden die Bilder zu schwarz-weiß konvertiert. Im HDFS werden beide Varianten der Bilder abgespeichert und das konvertierte Bild wird Tesseract zur Textumwandlung übergeben. 
+Nachdem die Elemente extrahiert wurden wird je nach Fall weiter verfahren. Wenn es eine Bild-URL ist wird das Bild herunter geladen. Um mit Tesseract eine höhere Genauigkeit zu erzielen wie in \cref{sec:sub:sub:bild} beschrieben, werden die Bilder zu schwarz-weiß konvertiert. Im HDFS werden beide Varianten der Bilder abgespeichert und das konvertierte Bild wird Tesseract zur Textumwandlung übergeben.
 % TODO installation tesseract etc erklären vll bei setup (sprachpakete etc)
 
 \begin{lstlisting}[caption=Schwarz-weiß Konvertierung, language=Python]
@@ -708,7 +708,7 @@ Nachdem die Elemente extrahiert wurden wird je nach Fall weiter verfahren. Wenn 
 	self.hdfs_client.save_as_file(self.directory, fileNameBW, imgBWbytes)
 	self.hdfs_client.save_as_file(self.directory, fileName, imgBytes)
 
-	data = pytesseract.image_to_string(imgBW, lang='deu') 
+	data = pytesseract.image_to_string(imgBW, lang='deu')
 \end{lstlisting}
 
 Im Falle eines verlinkten PDF-Dokuments wird dieses herunter geladen und der Text mit der Bibliothek pdfminer.six extrahiert.
@@ -726,15 +726,15 @@ Der letzte Fall bedeutet das die Informationen direkt im HTML-Code als Text inte
       webContent = response.read()
 	self.hdfs_client.save_as_file(self.directory, str(time.time())+
 		_+DEFAULT_HTML_FILENAME, webContent)
-	data = elem.text.strip() 
+	data = elem.text.strip()
 \end{lstlisting}
 
 \subsubsection{Metadaten Extrahierung}
 
-Nachdem in \cref{sec:sub:sub:rohdaten} die Rohdaten gespeichert wurden und der Text daraus extrahiert wurde ging es darum sinnvolle Metadaten zu filtern. Eine sinnvolle und robuste Verarbeitung zu finden war eine große Herausforderung - um daraus nicht eine neue Projektarbeit vom Zaun zu brechen wurde auf simple Methoden wie String vergleiche und verstärkt auf reguläre Ausdrücke gesetzt. Zu Beginn der Entwicklung war der Inzidenzwert die maßgebliche Metrik zur Bewertung der Situation im Gegensatz zur Krankenhausbelegung derzeit. Deswegen wurde unter anderen der Text darauf analysiert ob die Maßnahme Inzidenzbasierend ist und wenn ja, welche Inzidenzschranken vorhanden sind. Des weiteren wird ein Gültigkeitsdatum gesucht und der Text auf diverse Tags wie Maskenpflicht, Kontaktbeschränkungen etc. untersucht um die Maßnahme etwas eingrenzen zu können. Hierfür wurden diverse reguläre Ausdrücke verwendet z.B. 
+Nachdem in \cref{sec:sub:sub:rohdaten} die Rohdaten gespeichert wurden und der Text daraus extrahiert wurde ging es darum sinnvolle Metadaten zu filtern. Eine sinnvolle und robuste Verarbeitung zu finden war eine große Herausforderung - um daraus nicht eine neue Projektarbeit vom Zaun zu brechen wurde auf simple Methoden wie String vergleiche und verstärkt auf reguläre Ausdrücke gesetzt. Zu Beginn der Entwicklung war der Inzidenzwert die maßgebliche Metrik zur Bewertung der Situation im Gegensatz zur Krankenhausbelegung derzeit. Deswegen wurde unter anderen der Text darauf analysiert ob die Maßnahme Inzidenzbasierend ist und wenn ja, welche Inzidenzschranken vorhanden sind. Des weiteren wird ein Gültigkeitsdatum gesucht und der Text auf diverse Tags wie Maskenpflicht, Kontaktbeschränkungen etc. untersucht um die Maßnahme etwas eingrenzen zu können. Hierfür wurden diverse reguläre Ausdrücke verwendet z.B.
 
 \begin{lstlisting}[caption=Regex für Inzidenzschranken, language=Python]
-INCIDENCE_REGEX = 
+INCIDENCE_REGEX =
 	r"(((?<=Inzidenzstufe)|(?<=Inzidenzwert)
 	|(?<=Inzidenz)|(?<=Schwellenwert))).{0,20}(\d{2,3})"
 \end{lstlisting}
@@ -764,7 +764,7 @@ Um zu verhindern das die selben Maßnahmen immer wieder neu extrahiert werden wi
 
 \subsubsection{HDFS Wrapper}
 
-Um die Daten ohne Probleme ins HDFS einfügen zu können wurde auf die pywebHDFS Bibliothek in Python zurückgegriffen. Diese bildet für uns die Schnittstelle zwischen unserem Code und dem Dateiablagesystem. Um das ganze isoliert nutzen zu können wurde eine HDFS Wrapper Klasse geschrieben die, die Funktionalität von pywebhdfs beinhaltet.
+Um die Daten ohne Probleme ins HDFS einfügen zu können wurde auf die 'pywebHDFS' Bibliothek in Python zurückgegriffen. Diese bildet für uns die Schnittstelle zwischen unserem Code und dem Dateiablagesystem. Um das ganze isoliert nutzen zu können wurde eine HDFS Wrapper Klasse geschrieben die, die Funktionalität von pywebhdfs beinhaltet.
 
 \subsubsection{ElasticSearch Wrapper}
 
