--- a/bericht/thesis.tex
+++ b/bericht/thesis.tex
@@ -764,7 +764,7 @@ Um zu verhindern das die selben Maßnahmen immer wieder neu extrahiert werden wi
 
 \subsubsection{HDFS Wrapper}
 
-Um die Daten ohne Probleme ins HDFS einfügen zu können wurde auf die 'pywebHDFS' Bibliothek in Python zurückgegriffen. Diese bildet für uns die Schnittstelle zwischen unserem Code und dem Dateiablagesystem. Um das ganze isoliert nutzen zu können wurde eine HDFS Wrapper Klasse geschrieben die, die Funktionalität von pywebhdfs beinhaltet.
+Um die Daten ohne Probleme ins HDFS einfügen zu können wurde auf die 'pywebHDFS' Bibliothek in Python zurückgegriffen. Diese bildet für uns die Schnittstelle zwischen unserem Code und dem Dateiablagesystem. Um das ganze isoliert nutzen zu können wurde eine HDFS Wrapper Klasse geschrieben die, welche Funktionalität von pywebhdfs beinhaltet.
 
 \subsubsection{ElasticSearch Wrapper}
 
